<resources>
	<string name="app_name">yyqz</string>
	<string name="StartTour">收藏</string>
	<string name="MainName">衢州文旅</string>
	<string name="Welcom">欢迎您：%s</string>
	<string name="Appointment">预约</string>
	<string name="HotTour">热门景区</string>
	<string name="Description">随着人们生活水平的提升，旅游需求日益增加·但是由于疫情的反复无常，人们不能去到自己想去的地方游玩·因此关于景点云游览的平台应运而生·本项目通过综合展示衢州的旅游景点和风俗民情，把属于衢州的文化底蕴展现给游客面前。通过该平台，可以实现让大家通过网络来欣赏州的优美风景，领略衢州的特色美食·还可以实时在线预订各大景点的门票以及订购衢州土特产。使人们足不出户便可以体会到衢州这个城市带来的美好。该平台不仅对想去衢州游玩的朋友提供了便利，还促进了当地的经济发展、文化发展。</string>
	<string name="Reg">立即注册</string>
	<string name="ToReg">没有账号？前往立即注册吧！</string>
	<string name="Reg2">注册账号</string>
	<string name="LoginDesc">登录了解更多吧~</string>
	<string name="Login">登录</string>
	<string name="ForgetPwd">找回密码</string>
	<string name="Password">密码</string>
	<string name="Username">账号</string>
	<string name="Name">名称</string>
	<string name="VerifyPwd">请再一次输入密码</string>
	<string name="todo">todo</string>
	<string name="User">用户</string>
	<string name="Location">位置</string>
	<string name="OpenTime">开放时间</string>
	<string name="Tickets">剩余门票：%s</string>
	<string name="AlreadyTickets">已预定门票：%d</string>
	<string name="TourDesc">景区介绍</string>
	<string name="tour_book_tickets">预约门票</string>
	<string name="ChangeUserName">更改用户名</string>
	<string name="ChangePwd">更改密码</string>
	<string name="MyBookingTickets">我的门票</string>
	<string name="NoPreBookingTickets">暂无预定的门票</string>
	<string name="CancelBookingTickets">取消预定</string>
	<string name="submit">确认提交</string>
	<string name="AfterChangePwd">更改后的密码</string>
	<string name="Food">美食</string>
	<string name="SpecifiedFood">衢州美食</string>
	<string name="Ku">苦</string>
	<string name="La">辣</string>
	<string name="Tian">甜</string>
	<string name="Xian">咸</string>
	<string name="tour_traffic">景区附近交通状况</string>
	<string name="BaiduMap">查看位置</string>
	<string name="BaiduMapDetail">百度地图详细位置</string>
	<string name="Video">观看视频</string>
	<string name="SetLikeType">设置喜欢的美食类型</string>
	<string name="EditByLikeTye">根据喜好筛选美食</string>
	<string name="EditByRecommend">根据评分推荐筛选美食</string>
	<string name="ExitUser">退出账号</string>
	<string name="StartsTour">收藏的景点</string>
	<string name="AutoLogin">自动登录</string>
	<string name="CancelBookingCount">取消预定指定数量的门票</string>
	<string name="CancelBookingAll">取消预定全部门票</string>
</resources>