<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".view.UserActivity">

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/user_toolbar"
		android:layout_width="match_parent"
		android:layout_height="?android:actionBarSize"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:title="@string/Welcom" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/user_changeUsr"
		style="@style/Widget.Material3.Button.IconButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="start"
		android:text="@string/ChangeUserName"
		android:textColor="#BF000000"
		android:textStyle="bold"
		app:icon="@drawable/ic_user_24dp"
		app:iconTint="#BF000000"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/user_toolbar" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/user_changePwd"
		style="@style/Widget.Material3.Button.IconButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="start"
		android:text="@string/ChangePwd"
		android:textColor="#BF000000"
		android:textStyle="bold"
		app:icon="@drawable/ic_password_24dp"
		app:iconTint="#BF000000"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/user_changeUsr" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/user_changeLikeType"
		style="@style/Widget.Material3.Button.IconButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="start"
		android:text="@string/SetLikeType"
		android:textColor="#BF000000"
		android:textStyle="bold"
		app:icon="@drawable/ic_food_24dp"
		app:iconTint="#BF000000"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/user_changePwd" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/user_exit"
		style="@style/Widget.Material3.Button.IconButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="start"
		android:text="@string/ExitUser"
		android:textColor="#BF000000"
		android:textStyle="bold"
		app:icon="@drawable/ic_arrow_left_24dp"
		app:iconTint="#BF000000"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/user_changeLikeType" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/user_starts"
		style="@style/Widget.Material3.Button.IconButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="start"
		android:text="@string/StartsTour"
		android:textColor="#BF000000"
		android:textStyle="bold"
		app:icon="@drawable/ic_start_24dp"
		app:iconTint="#BF000000"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/user_exit" />

	<TextView
		android:id="@+id/user_myBookingTickets"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginTop="20dp"
		android:text="@string/MyBookingTickets"
		android:textSize="18sp"
		android:textStyle="bold"
		app:drawableStartCompat="@drawable/ic_bookmark_24dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/user_starts" />

	<View
		android:id="@+id/divider_1"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_margin="20dp"
		android:background="@drawable/shape_divider_linear"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/user_myBookingTickets" />


	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/user_rv"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider_1"
		tools:listitem="@layout/user_rv" />

	<TextView
		android:id="@+id/user_noTickets"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="center"
		android:text="@string/NoPreBookingTickets"
		android:textSize="18sp"
		android:textStyle="bold"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/user_myBookingTickets" />


</androidx.constraintlayout.widget.ConstraintLayout>