<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.radiobutton.MaterialRadioButton
			android:id="@+id/food_edit_likeType"
			android:layout_width="match_parent"
			android:layout_marginTop="10dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="10dp"
			android:text="@string/EditByLikeTye"
			android:textStyle="bold"
			app:buttonTint="@color/pink"
			app:useMaterialThemeColors="true" />

		<com.google.android.material.radiobutton.MaterialRadioButton
			android:id="@+id/food_edit_recommend"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="10dp"
			android:checked="true"
			android:text="@string/EditByRecommend"
			android:textStyle="bold"
			app:buttonTint="@color/pink"
			app:useMaterialThemeColors="true" />

	</RadioGroup>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/food_edit_submit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="10dp"
		android:backgroundTint="@color/blue_1fa2ff"
		android:text="@string/submit" />

</LinearLayout>
