<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_margin="10dp"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<TextView
		android:id="@+id/user_rv_tickets"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:gravity="start"
		android:textSize="14sp"
		android:textStyle="bold"
		app:drawableStartCompat="@drawable/ic_tickets_14dp"
		app:layout_constraintVertical_bias="0"
		tools:text="@string/MainName" />

	<androidx.cardview.widget.CardView
		style="@style/Widget.Material3.CardView.Filled"
		android:layout_width="match_parent"
		android:layout_height="148dp"
		android:layout_margin="5dp"
		app:cardCornerRadius="10dp"
		app:cardElevation="4dp">


		<ImageView
			android:id="@+id/user_rv_image"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:contentDescription="@string/todo"
			android:foreground="#59000000"
			android:scaleType="centerCrop"
			android:src="@drawable/placeholder" />

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/user_rv_tourName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:gravity="center"
				android:textColor="@color/white"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:text="@string/MainName" />

			<TextView
				android:id="@+id/user_rv_date"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:gravity="start"
				android:textColor="@color/white"
				android:layout_marginEnd="10dp"
				android:textSize="14sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/user_rv_cancel"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/user_rv_cancel"
				tools:text="@string/MainName" />


			<com.google.android.material.button.MaterialButton
				android:id="@+id/user_rv_cancel"
				style="@style/Widget.Material3.Button.IconButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/CancelBookingTickets"
				android:textColor="@color/white"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/user_rv_tourName"
				app:layout_constraintVertical_bias="1" />


		</androidx.constraintlayout.widget.ConstraintLayout>


	</androidx.cardview.widget.CardView>
</LinearLayout>